--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <h2>Minoxia</h2>
                 </div>
                 <div class="navbar-desktop-items">
-                    <a href="index.html"><h3 class="active hoverbtn">Home</h3></a>
+                    <a href="index.html" class="hoverbtn active"><h3>Home</h3></a>
                     
                     <div class="dropdown">
                         <a onclick="myFunction3()" class="dropbtn hoverbtn"><h3 class="dropbtn">Information</h3></a>
@@ -27,9 +27,9 @@
                             <a href="./information/roadmap.html">Roadmap</a>
                         </div>
                     </div>
-                    <a href="./project/index.html"><h3 class="hoverbtn">The Project</h3></a>
-                    <a href="./team/index.html"><h3 class="hoverbtn">The Team</h3></a>
-                    <a href="https://socials.minoxia.org/discord" target="_blank"><h3 class="nav-icon-h3 hoverbtn"> <img src="./files/icons/discord-icon.png" class="nav-icon"></h3></a>
+                    <a href="./project/index.html" class="hoverbtn"><h3>The Project</h3></a>
+                    <a href="./team/index.html" class="hoverbtn"><h3>The Team</h3></a>
+                    <a href="https://socials.minoxia.org/discord" target="_blank" class="hoverbtn"><h3 class="nav-icon-h3"> <img src="./files/icons/discord-icon.png" class="nav-icon"></h3></a>
                 </div>
             </div>
 
@@ -88,6 +88,10 @@
     
     <body id="home-page">
         <main class="home-page">
+
+            <div class="image-background">
+            </div>
+
             <div class="hero" style="font-size: large;">
                 <div class="block-1">
                     <h2>Theme Park</h2>
@@ -95,6 +99,33 @@
                 <div class="block-2">
                     <h1>Minoxia</h1>
                 </div>
+            </div>
+            <div class="separator1">
+                <div class="separator"></div>
+            </div>
+            <div class="text-block id-1">
+                <div>
+                    <h3>What is minoxia?</h3>
+                    <p>
+                        Minoxia is our project of creating a huge Minecraft amusement park (or in proper English a theme park), we are planning to have multiple zones with different styles, rides, stores and a whole lot more to do. Of course this isn't the first time this has been done BUT this is one of the few times it is done on a server that anyone can join! With this we hope to make an awesome theme park that you guys can enjoy. We will also be looking into bringing a staff mode so you can play as a theme park worker and control rides, look behind the scenes and get exclusive access to stuff!
+                        And good news since you all are the first guys to join you will all get access to the closed beta once it gets released :D
+                    </p>
+                </div>
+            </div>
+            <div class="separator2">
+                <div class="separator"></div>
+            </div>
+            <div class="text-block id-2">
+                <div>
+                    <h3>What is minoxia?</h3>
+                    <p>
+                        Minoxia is our project of creating a huge Minecraft amusement park (or in proper English a theme park), we are planning to have multiple zones with different styles, rides, stores and a whole lot more to do. Of course this isn't the first time this has been done BUT this is one of the few times it is done on a server that anyone can join! With this we hope to make an awesome theme park that you guys can enjoy. We will also be looking into bringing a staff mode so you can play as a theme park worker and control rides, look behind the scenes and get exclusive access to stuff!
+                        And good news since you all are the first guys to join you will all get access to the closed beta once it gets released :D
+                    </p>
+                </div>
+            </div>
+            <div class="separator3">
+                <div class="separator"></div>
             </div>
         </main>
     </body>
